Fix link colors and general spacing

--- a/lektor_tekir_admin/static/tekir-admin.css
+++ b/lektor_tekir_admin/static/tekir-admin.css
@@ -1,10 +1,11 @@
 :root {
   --color-bg: hsl(0, 0%, 95%);
   --color-text: hsl(0, 0%, 0%);
+  --color-link: hsl(240, 100%, 50%);
   --color: hsl(32, 66%, 37%);
 }
 
-/* RESET */
+/* BASICS */
 
 *,
 *::before,
@@ -12,48 +13,8 @@
   box-sizing: border-box;
 }
 
-* {
-  line-height: calc(1em + 0.5rem);
-}
-
 body {
   margin: 0;
-}
-
-img,
-svg {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-nav a {
-  text-decoration: none;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* GENERAL */
-
-body {
-  display: grid;
-  grid-template-areas:
-    ".   header"
-    "nav content";
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto 1fr;
-  height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
   font-family: system-ui, sans-serif;
@@ -66,19 +27,77 @@ pre {
   font-family: ui-monospace, monospace;
 }
 
+a {
+  color: var(--color-link);
+}
+
+nav a {
+  text-decoration: none;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img,
+svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* LAYOUT */
+
+body {
+  display: grid;
+  grid-template-areas:
+    ".   header"
+    "nav content";
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto 1fr;
+  height: 100vh;
+}
+
 h1 {
   grid-area: header;
   width: 100%;
   margin: 0;
+}
+
+nav {
+  grid-area: nav;
+}
+
+main {
+  grid-area: content;
+}
+
+h1,
+nav,
+main {
   padding: 1rem;
+}
+
+/* HEADING */
+
+h1 {
   background-color: var(--color);
   color: white;
   font-size: 1.5em;
 }
 
+/* NAV */
+
 nav {
-  grid-area: nav;
-  padding: 1rem;
   font-size: 90%;
 }
 
@@ -99,27 +118,41 @@ nav a {
   color: inherit;
 }
 
-main {
-  grid-area: content;
-  padding: 2rem;
+/* MAIN */
+
+section {
+  padding: 1em;
+  border: 1px solid;
+  border-radius: 0.25rem;
 }
 
-/* CUSTOM */
+section > *:first-child {
+  margin-block-start: 0;
+}
 
-.tekir-page-count h2 {
-  margin: 0;
+section > *:last-child {
+  margin-block-end: 0;
+}
+
+h2 {
   color: var(--color);
   font-size: 1.1em;
 }
 
+h2 + p {
+  margin-block-start: 0;
+}
+
+/* CUSTOM */
+
 .tekir-page-count p {
-  margin: 0.25em 0;
   font-size: 2em;
 }
 
 .tekir-contents {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
 }
 
 /* MEDIA QUERIES */
@@ -128,5 +161,6 @@ main {
   :root {
     --color-bg: hsl(0, 0%, 5%);
     --color-text: hsl(0, 0%, 100%);
+    --color-link: hsl(240, 100%, 85%);
   }
 }
